# terminal-audio-visualizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: ERD.md  HLD.md  INSTALL.md  LLD.md
scripts/: commitlint.py
src/music_tui/: __init__.py  __main__.py  colors.py  config.py  constants.py  helpers.py  install.py  mpv.py  platform_.py  scanner.py  themes.py  ui.py  visualizer.py
tests/: test_config.py  test_constants.py  test_helpers.py  test_mpv.py  test_scanner.py  test_visualizer.py
